--- a/src/App.css
+++ b/src/App.css
@@ -427,12 +427,12 @@ nav{
     gap: 10px;
     width: 100vw;
     min-height: 100vh;
-    background-color: #ffa45b;
+    background-color: var(--bgColor);
 }
 
 .profilecard
 {
-    position:relative;  
+    position: relative;  
     align-self: flex-start;
     display: flex;
     justify-content: center;
@@ -988,7 +988,7 @@ nav{
   width: 500px;
   height: 50%;
   transform: rotate(-45deg);
-  background-color: #5c8838;
+  background-color: #303030;
   z-index: 0;
   order: -1;
 }
@@ -1102,15 +1102,14 @@ nav{
 .course-list-container {
   margin: 20px;
   padding: 20px;
-  border: 1px solid #ebe7e7;
+  border: 1px solid #ccc;
   border-radius: 8px;
   background-color: #f7f7f7;
 }
 
 /* Course Cards */
-.course-card {
+.course-cards {
   list-style: none;
-  color: black;
   padding: 0;
 }
 
@@ -1119,21 +1118,18 @@ nav{
   width: 80%;
   min-height: 150px;
   padding: 15px;
-  background-color: #F7F7F7;
-  border: 1px solid #fff;
+  background-color: white;
+  border: 1px solid #ccc;
   border-radius: 8px;
   padding: 15px;
   gap: 10px;
   display: flex;
   justify-content: space-between;
   align-items: center;
-  
 }
-
 
 .course-info {
   margin: 5px 0;
-  
 }
 
 .edit-button,
@@ -1156,197 +1152,47 @@ nav{
   cursor: pointer;
   margin-top: 10px;
 }
-/* Add this CSS to a separate CSS file or include it in your existing stylesheet */
 
-.App-header {
-  background-color: #032539;
-  color: white;
-  text-align: center;
-  padding: 20px;
+.profilepage
+{
+  justify-content: center;
 }
-
-.course-card button:hover {
-  background-color: #ffa45b; /* Change to a darker color on hover if desired */
-}
-
-.vision-box, .mission-box, .mission-image {
-  background-color: #ffa45b;
-  border: 1px solid #d0d0d0;
-  border-radius: 8px;
-  padding: 20px;
-  width: 100%;
-  max-width: 600px;
-  box-shadow: 0px 4px 8px rgba(0, 0, 0, 0.1);
-}
-
-.mission-box {
-  align-self: flex-end; /* Align to the right */
-}
-.fun-text{
-  /*width: 85%;
-  height: 10%;*/
-  margin-top: 10%;
-  gap: 40px;
-  /*border-radius: 100px;*/
-  box-shadow: black;
+.profilepage > form
+{
   display: flex;
-  flex-direction: row;
+  justify-content: center;
   align-items: center;
-  background-color: #a7f3d9;
-  padding: 30px;
-  margin: 20px;
-  max-width: 1290px;
-  
-
-}
-.fun-text1 {
-  /*width: 85%;
-  height: 10%;*/
-  margin-top: 10%;
-  gap: 40px;
-  display: flex;
-  flex-direction: row-reverse; 
-  align-items: center;
-  
-  padding: 30px;
-  margin: 20px;
-  max-width: 1290px;
-  /*border-radius: 10px;*/
-  box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
-}
-
-
-.fun-text1 img {
-  margin-left: 20px; 
-  max-width: 100%; 
-}
-.fun-text1 img {
-  margin-left: 20px; 
-  max-width: 100%; 
-}
-.fun-text1 p{
-  color: black;
-  text-align: center;
-  padding: 100px;
-  font-weight: bolder;
-  font-family:'apple';
-  font-size: '100%';
- 
-
-
-}
-
-.fun-text p{
-  
-  color: black;
-  text-align: center;
-  padding: 100px;
-  font-weight: bolder;
-  font-family:'apple';
-  font-size: '100%';
-
-}
-
-
-.exam-table {
-  margin-top: 40px;
-  text-align: center;
-  background-color: #a7f3d9;
-  padding: 50px 0;
-  
-  
-}
-.exam-table h2{
-  color: black;
-  font-size: 32px;
-  padding: 50px 0;
-  text-align:center;
-}
-table {
-  border-collapse: collapse;
-  width: 100%;
-  
-}
-
-th, td {
-  border: 1px solid black;
-  padding: 8px;
-}
-
-th {
-  background-color: #a7f3d9;
-}
-
-a {
-  text-decoration: none;
-  color: #007bff;
-}
-
-.course-container{
-  width: 100%;
-  min-height: 100vh;
-  background:#a7f3d9;
-}
-.coure-container h2{
-  color: black;
-  font-size: 32px;
-  padding: 50px 0;
-  text-align:center;
-
-}
-.price-row{
-  width: 90%;
-  max-width: 1100px;
-  margin: auto;
-  display: grid;
-  grid-template-columns: repeat(auto-fit, minmax(250px, 1fr));
-  grid-gap: 25px;
-}
-.price-col{
-  background: #ffa45b;
-  padding: 10% 15%;
+  width: 80%;
+  height: 80vh;
+  background-color: #fff;
   border-radius: 10px;
-  color: black;
-  text-align: center;
 }
-.price-col p{
-  font-size: 22px;
+
+.profilepage > form > .image
+{
+  width: 200px;
 }
-.price-col h3{
-  font-size: 44px;
-  margin: 20px 0 40px;
-  font-weight: 500;
+
+.profilepage > form > div
+{
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  flex-direction: column;
+  width: 50%;
+  gap: 10px;
 }
-.price-col h3 span{
-  font-size: 16px;
-}
-.price-col ul{
-  text-align: left;
-  margin: 20px 0;
-  color: black;
-  list-style: none;
-}
-.price-col ul li{
-  margin: 15px 0;
-}
-.price-col ul li::before{
-  content: '\2022';
-  color: #e33058;
-  font-weight: bold;
-  margin-right: 8px;
-}
-.price-col button{
-  width: 100%;
-  padding: 14px 0;
-  background: transparent;
-  color: black;
-  font-size: 15px;
-  border: 1px solid #e33058;
-  border-radius: 6px;
-  margin-top: 30px;
-  cursor: pointer;
-  transition: background 0.5s;
-}
-.price-col button:hover{
-  background: #e33058;
+
+/* .profilepage > form > div > label
+{
+  align-self: flex-start;
+} */
+.profilepage > form > div > input
+{
+  width: 80%;
+  height: 50px;
+  padding: 10px;
+  font-size: 1.5em;
+  border: none;
+  border-radius: 10px;
 }
