--- a/src/App.css
+++ b/src/App.css
@@ -988,7 +988,7 @@ nav{
   width: 500px;
   height: 50%;
   transform: rotate(-45deg);
-  background-color: #303030;
+  background-color: rgb(56, 156, 5);
   z-index: 0;
   order: -1;
 }
@@ -1156,6 +1156,7 @@ nav{
 .profilepage
 {
   justify-content: center;
+  
 }
 .profilepage > form
 {
@@ -1187,12 +1188,39 @@ nav{
 {
   align-self: flex-start;
 } */
-.profilepage > form > div > input
-{
+.profilepage > form > div > input {
   width: 80%;
   height: 50px;
   padding: 10px;
   font-size: 1.5em;
-  border: none;
+  border: 2px solid #000; /* Add this line for a black border */
   border-radius: 10px;
 }
+
+
+
+/* Container for the course details */
+.details {
+  display: flex;
+  flex-direction: column;
+  align-items: flex-start;
+}
+
+
+button {
+  padding: 10px 20px;
+  background-color: #f12409; 
+  color: #fff; 
+  border: none;
+  border-radius: 4px;
+  cursor: pointer;
+  font-size: 16px;
+  margin-top: 10px; 
+}
+
+button:hover {
+  background-color: #ffa45b; 
+}
+
+
+
